infra/k8s-prod/client-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: client-deploy
spec:
    replicas: 1
    selector:
        matchLabels:
            app: client
    template:
        metadata:
            labels:
                app: client
        spec:
            containers:
                - name: client
                  image: raazimuhammed/omniflow-client
---
apiVersion: v1
kind: Service
metadata:
    name: client-service
spec:
    selector:
        app: client
    ports:
        - name: client
          protocol: TCP
          port: 3000
          targetPort: 3000
