infra/k8s-prod/ingress-deploy.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        nginx.ingress.kubernetes.io/use-regex: "true"
        kubernetes.io/ingress.class: nginx
spec:
    rules:
        - host: omni-flow.live
          http:
              paths:
                  - path: /api/user/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: user-service
                            port:
                                number: 4000
                  - path: /api/project/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: project-service
                            port:
                                number: 4005
                  - path: /api/team/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: team-service
                            port:
                                number: 4010
                  - path: /?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: client-service
                            port:
                                number: 3000
